<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">DomySetting</string>
    <string name="manual_add_wifi">Add WiFi manually</string>
    <string name="wifi_share">Share WiFi</string>
    <string name="pppoe_connect">Broadband connection</string>
    <string name="eth_title">Wired network</string>
    <string name="eth_dis_title"> Wired network is not connected</string>
    <string name="btn_wifi">WiFi network</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="manual_wifi_name">Name</string>
    <string name="manual_wifi_safe">Type</string>
    <string name="manual_wifi_password">Password</string>
    <string name="manual_wifi_commit">Submit</string>
    <string name="wifi_security_none">Open WiFi network</string>
    <string name="wifi_security_wep">WEP</string>
    <string name="wifi_security_wpa">WPA PSK</string>
    <string name="wifi_security_wpa2">WPA2 PSK</string>
    <string name="wifi_security_wpa_wpa2">WPA/WPA2 PSK</string>
    <string name="wifi_security_psk_generic">@string/wifi_security_wpa_wpa2</string>
    <string name="wifi_security_eap">802.1x EAP</string>
    <string name="wifi_security_short_wep">WEP</string>
    <string name="wifi_security_short_wpa">WPA</string>
    <string name="wifi_security_short_wpa2">WPA2</string>
    <string name="wifi_security_short_wpa_wpa2">WPA/WPA2</string>
    <string name="wifi_security_short_psk_generic">@string/wifi_security_short_wpa_wpa2</string>
    <string name="wifi_security_short_eap">802.1x</string>
    <string name="wifi_disabled_password_failure">authentication failed</string>
    <string name="wifi_connected_failed">Connection failed,please try again</string>
    <string name="wifi_fail_to_scan" msgid="1265540342578081461">Not found</string>
    <string name="wifi_failed_save_message">Saved unsuccessfully</string>
    <string name="wifi_failed_forget_message">Forget network failed</string>
    <string name="wifi_sucess_forget_message">Forget network success</string>
    <string name="wifi_not_in_range">Not in range</string>
    <string name="wifi_connected_success">\u0020(Connected)</string>
    <string name="wifi_password_length_limit">Password must be at least 8 characters</string>
    <string name="wifi_password_error1">Password must be greater than to 0 and less than or equal to 63</string>
    <string name="wifi_password_error2">Password must be greater than or equal to 8 and less than or equal to 63</string>
    <string name="wifi_ssid_error">SSID must be greater than 0 and less than or equal to 20</string>
    <string name="wifi_scaning">Scanning&#8230;</string>
    <string name="wifi_password_null">Password can not be empty！</string>
    <string name="pppoe_connect_commit">Connect</string>
    <string name="pppoe_username">Username</string>
    <string name="pppoe_password">Password</string>
    <string name="pppoe_connect_failed">Connection failed</string>
    <string name="pppoe_connect_success">Connection succeed</string>
    <string name="pppoe_disconnect_failed">Disconnection failed</string>
    <string name="pppoe_disconnect_ok">Disconnection succeed</string>
    <string name="pppoe_hangup_waiting_msg">Waiting please</string>
    <string name="pppoe_connect_timeout">Connection timeout</string>
    <string name="pppoe_connect_failed_auth">Invalid username or password</string>
    <string name="pppoe_connect_failed_server_no_response">Sever no response</string>
    <string name="pppoe_disconnect_waiting_msg">Disconnecting,wait please...</string>
    <string name="pppoe_connect_waiting_msg">Connecting,wait please...</string>
    <string name="pppoe_connecting">PPPOE connecting...</string>
    <string name="pppoe_name_or_psw_is_null">Please fill username/password</string>
    <string name="pppoe_auto_connect">Connect automatically</string>
    <string name="pppoe_state_disconnected">PPPOE disconnected,please don\'t try again.</string>
    <string name="test_speed_movie_360p">建议更换网络</string>
    <string name="wifi_share_on">Turn on</string>
    <string name="wifi_share_off">Turn off</string>
    <string name="wifi_share_security_open">Open</string>
    <string name="wifi_share_security_wpa2_psk">WPA2 PSK</string>
    <string name="wifi_share_error_2">Please enter WiFi name</string>
    <string name="wifi_share_error_1">Enable hotspot failed</string>
    <string name="wifi_share_start_soft">Data processing,wait please...</string>
    <string name="wifi_share_open_softap">Opening,wait please...</string>
    <string name="wifi_share_close_softap">Closing,wait please...</string>
    <string name="wifi_share_open_success">Hotspot has been opened</string>
    <string name="wifi_share_opened">Turned on</string>
    <string name="wifi_share_name_too_long">Shared name is too long, please modify less than 20 characters</string>
    <string name="ethernet_name">Wired network</string>
    <string name="ethernet_notice">Settings of wired network</string>
    <string name="ethernet_item_test_speed">Network speed</string>
    <string name="ethernet_item_wifi_share">Share Wi-Fi</string>
    <string name="ethernet_item_manual_adjust">Manual setting</string>
    <string name="ethernet_item_ip_address">IP address</string>
    <string name="ethernet_item_net_mask">Subnet mask</string>
    <string name="ethernet_item_gateway">Gateway</string>
    <string name="ethernet_item_dns">DNS</string>
    <string name="ethernet_item_ipv6">ipv6</string>
    <string name="ethernet_item_ipv4">ipv4</string>
    <string name="ethernet_item_disable_net">Forget network</string>
    <string name="on">Turn on</string>
    <string name="off">Turn off</string>
    <string name="ethernet_dis_use_wifi">Connect WiFi</string>
    <string name="ethernet_dis_use_pppoe">Connect PPPOE</string>
    <string name="ethernet_dis_modify_net">Modify settings</string>
    <string name="ethernet_dis_reconnect">Try again</string>
    <string name="ethernet_dis_check_net">Check connection</string>
    <string name="ethernet_dis_notice">Connection failed</string>
    <string name="str_ip_input_type">1234567890.</string>
    <string name="str_ip_no_gateway">IP and gateway aren\'t on the same segment</string>
    <string name="str_ip_address_invalid">Invalid format</string>
    <string name="str_ip_max_value">The max number is 255</string>
    <string name="str_ip_full_characters">Exceed character limit</string>
    <string name="str_ip_equal_gateway">IP is same as gateway</string>
    <string name="network_error">Server connection timeout！</string>
    <string name="wifi_name">Wi-Fi</string>
    <string name="wifi_notice">Settings of Wi-Fi network</string>
    <string name="wifi_manual_add">Add WiFi manually</string>
    <string name="wifi_password_error">Incorrect password</string>
    <string name="test_speed_title">Network speed </string>
    <string name="test_speed_notice">Speed testing</string>
    <string name="test_speed_unit_converter">1MB/S=8Mb/S</string>
    <string name="test_speed_real_speed">Peak speed:</string>
    <string name="test_speed_average_speed">Avg speed:</string>
    <string name="test_speed_broadband_speed">Broadband:</string>
    <string name="test_speed_broadband_title_1">Your network speed is faster than the rest</string>
    <string name="test_speed_broadband_title_2">users\'</string>
    <string name="test_speed_broadband_title_3">Current speed is better for:</string>
    <string name="test_speed_broadband_level_1">Poor speed,you may experience video lag.</string>
    <string name="test_speed_broadband_level_1_1">Please try other connection</string>
    <string name="test_speed_begin_test">Start testing</string>
    <string name="test_speed_repeat_test">Test again</string>
    <string name="test_speed_net_stars">Rate:</string>
    <string name="test_speed_tv_level"> Better for:</string>
    <string name="test_speed_0">0</string>
    <string name="test_speed_00">.00</string>
    <string name="test_speed_bigm_unit">MB/S</string>
    <string name="test_speed_littlem_unit">Mb/S</string>
    <string name="test_speed_per_30">30%</string>
    <string name="test_speed_per_50">50%</string>
    <string name="test_speed_per_70">70%</string>
    <string name="test_speed_per_90">90%</string>
    <string name="test_speed_movie_720p">720P</string>
    <string name="test_speed_movie_1080p">1080P</string>
    <string name="test_speed_movie_4k">4K</string>
    <string name="test_speed_testing_count">Counting</string>
    <string name="check_network_title">Network status</string>
    <string name="check_network_title_notice">Check network connection</string>
    <string name="check_network_connect_success">Connection succeed</string>
    <string name="check_network_connect_failed">Connection failed</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="cloud_user">cloud_user</string>
    <string name="wendu">35</string>
    <string name="scene">Modes</string>
    <string name="network_setting">Network</string>
    <string name="other_setting">Others</string>
    <string name="about_gen_setting">Settings of Domysystem</string>
    <string name="about_domy">About</string>
    <string name="about_domy_detail">About device</string>
    <string name="title_activity_deviceinfo">DeviceinfoActivity</string>
    <string name="model">Model</string>
    <string name="firmware">Firmware</string>
    <string name="tv_version">Screen firmware</string>
    <string name="android_version">Android version</string>
    <string name="ip">IP</string>
    <string name="mac">MAC</string>
    <string name="sn">Cloud box</string>
    <string name="msn">SN</string>
    <string name="yunsn">Cloud screen</string>
    <string name="time">Release date</string>
    <string name="space">Internal storage</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="title_activity_add_wifi">AddWifiActivity</string>
    <string name="title_activity_common">CommonActivity</string>
    <string name="protect_monitor_time">Screensaver</string>
    <string name="time_type">Time format</string>
    <string name="yaokong_setting">Remote control settings</string>
    <string name="blueteeth">Bluetooth</string>
    <string name="bluetooth_detail">Settings of bluetooth</string>
    <string name="keda_setting">DBS set-top box</string>
    <string name="version_check">Check for updates</string>
    <string name="open">Turn on</string>
    <string name="close">Turn off</string>
    <string name="time1">5mins</string>
    <string name="time2">10mins</string>
    <string name="time3">15mins</string>
    <string name="bluetooth_requir_pair">Bluetooth pairing request</string>
    <string name="bluetooth_unpair">Unpair</string>
    <string name="bluetooth_connect">Connect</string>
    <string name="bluetooth_connect_message">Please choose an operation</string>
    <string name="enter">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="wait_for_delete">The listed data will lose：\n1、Local system configuration data;\n2、Data about user behavior like viewing
records and favorites;\n3、Installed game applications.\nThe listed data will remain：\n1、The current system software;\n2、Pre-installed game applications;\n3、System files, etc.\nAre you sure you want to reset your
device?</string>
    <string name="textview_prompt_1">Press\u0020</string>
    <string name="textview_prompt_3">to return</string>
    <string name="yaokongshezhi">Remote control settings</string>
    <string name="yaokongqsheding">Bluetooth remote control settings</string>
    <string name="bluetooth_warning">\u0020\u0020\u0020\u0020\u0020Please press ∨and— at the same time\nto connect bluetooth.</string>
    <string name="textview_prompt_location">键\u0020确认\u0020\u0020\u0020|\u0020\u0020\u0020按\u0020</string>
</resources>