<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        >
        <ImageView 
            android:id="@+id/imageview_prompt_1"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/settings_prompt_image1"/>
        
       	<TextView 
       	    android:id="@+id/textview_prompt_1"
       	    android:layout_width="wrap_content"
       	    android:layout_height="wrap_content"
       	    android:layout_alignLeft="@+id/imageview_prompt_1"
       	    android:layout_marginLeft="41dp"
       	    android:layout_centerVertical="true"
       	    android:text="@string/textview_prompt_1"
       	    android:textSize="20dp"
       	    android:textColor="#FFFFFFFF"
       	    />
       	<ImageView 
       	    android:id="@+id/imageview_prompt_2"
       	    android:layout_width="34dp"
       	    android:layout_height="34dp"
       	    android:layout_toRightOf="@+id/textview_prompt_1"
       	    android:layout_centerVertical="true"
       	    android:src="@drawable/settings_prompt_image2"
       	    />
       	<TextView 
       	    android:id="@+id/textview_promt_2"
       	    android:layout_width="wrap_content"
       	    android:layout_height="wrap_content"
       	    android:layout_alignLeft="@+id/imageview_prompt_2"
       	    android:layout_marginLeft="40dp"
       	    android:layout_centerVertical="true"
       	    android:text="@string/textview_prompt_location"
       	    android:textSize="20dp"
       	    android:textColor="#FFFFFFFF"
       	    />
       	<ImageView 
       	    android:id="@+id/imageview_prompt_3"
       	    android:layout_width="34dp"
       	    android:layout_height="34dp"
       	    android:layout_toRightOf="@+id/textview_promt_2"
       	    android:layout_centerVertical="true"
       	    android:src="@drawable/settings_prompt_image3"
       	    />
       	<TextView 
       	   android:id="@+id/textview_promt_3"
       	    android:layout_width="wrap_content"
       	    android:layout_height="wrap_content"
       	    android:layout_alignLeft="@+id/imageview_prompt_3"
       	    android:layout_marginLeft="40dp"
       	    android:layout_centerVertical="true"
       	    android:text="@string/textview_prompt_3"
       	    android:textSize="20dp"
       	    android:textColor="#FFFFFFFF"
       	    />
</RelativeLayout>    

